# portfolio

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/core/: pyproject.toml
apps/api/core/app/: main.py
apps/api/core/app/api/: routes_auth.py  routes_internal.py  routes_public.py
apps/api/core/app/core/: config.py  runtime.py
apps/api/core/app/data/: demo_data.py
apps/api/core/app/models/: schemas.py
apps/api/core/app/services/: auth.py  bootstrap.py  platform.py  registry.py
apps/bots/: README.md
apps/bots/lead-qualifier/: main.py
apps/bots/ops-incident/: main.py
apps/parsers/: README.md
apps/parsers/lead-aggregator/: main.py
apps/parsers/tender-watch/: main.py
apps/web/monitoring/: package.json  tsconfig.json
apps/web/portfolio/: package.json  tailwind.config.ts  tsconfig.json
apps/web/sites/academy-os/: package.json
apps/web/sites/commerce-intelligence/: package.json  tailwind.config.ts  tsconfig.json
apps/web/sites/creator-ops/: package.json
apps/web/sites/dispatch-grid/: package.json
apps/web/sites/estate-command/: package.json
apps/web/sites/finpulse/: package.json
apps/web/sites/medaxis/: next.config.ts  package.json
apps/web/sites/ops-studio/: package.json  tsconfig.json
apps/web/sites/tableflow/: package.json
apps/web/sites/voyagr-control/: package.json
infra/docker/: Dockerfile.api  Dockerfile.web
infra/github/: ci.yml
infra/nginx/: default.conf
(+21 files in other folders)
